# NandProMax

./: .gitignore  99-ftdi.rules  Cargo.toml  LICENSE  README.md
.github/workflows/: client.yml
scripts/: install_libftd2xx.ps1  install_libftd2xx.sh
src/: main.rs
src/ftdi/: gpio.rs  spi.rs
src/interface/: cli.rs  mod.rs
src/picoflasher/: mod.rs  pfc.rs  pftcp.rs  usb.rs
